conf for java 12